--- a/src/main/resources/templates/patients.html
+++ b/src/main/resources/templates/patients.html
@@ -6,7 +6,7 @@
 <body>
 <div class="container">
     <div class="card">
-        <div class="card-header">Liste des patients</div>
+        <div class="card-header">Liste des patients !!</div>
         <div class="card-body">
             <table class="table" >
                 <thead class="table-dark">
