--- a/src/main/resources/templates/patients.html
+++ b/src/main/resources/templates/patients.html
@@ -33,6 +33,13 @@
 
                 </tbody>
             </table>
+            <ul class="nav nav-pills">
+                <li th:each="page,status:${pages}">
+                    <a th:class="${status.index==currentPage?'btn btn-info ms-1' : 'btn btn-outline-info ms-1'}"
+                       th:text="${status.index}"
+                    th:href="@{index(page=${status.index})}"></a>
+                </li>
+            </ul>
         </div>
     </div>
 </div>
